[FIX]: FIxed Broken UI Elements for Admins

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -546,7 +546,7 @@ footer a:hover {
 
 #menus {
   position: absolute;
-  margin-top: 80px;
+  margin-top: 702px;
 }
 
 #lobby-menu {
@@ -607,8 +607,9 @@ footer a:hover {
 }
 
 #admin{
-  margin-left: 55%;
-    width: 40%;
+  /*margin-left: 55%;*/
+  float:right;
+  /*width: 40%;*/
   display: block;
   padding: 8px 16px;
 }
@@ -657,4 +658,9 @@ footer a:hover {
 }
 .round-button:hover {
   background-color: #0056b3;
+}
+
+#chat{
+  position:absolute;
+  top:110vh;
 }
